# TelegramBotMeow

./: .env  README.md  pyproject.toml
telegram_bot/: bot.py
telegram_bot/config/: config.py
telegram_bot/custom_exceptions/: custom_exception.py
telegram_bot/filters/: filter.py
telegram_bot/handlers/: handler.py
telegram_bot/keyboards/: set_menu.py
telegram_bot/lexicon/: lexicon.py
telegram_bot/models/: methods.py
telegram_bot/service/: telegram_db_excel_service.py  telegram_log_input.py  youtubeapiclientv3.py
